Second_Step/data/45/252/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:19: error: cannot find symbol
                    echanger(tab, j, j+1);
                    ^
  symbol:   method echanger(int[],int,int)
  location: class Tools
Vpl_tests.java:6: error: cannot find symbol
        Tools.sortBubble(array);
             ^
  symbol:   method sortBubble(int[])
  location: class Tools
2 errors
Not compiled
--|>
Grade :=>>0.00000
